# textcorrector

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
3rd/: CMakeLists.txt
tc/: CMakeLists.txt
tc/base/: CMakeLists.txt  except.cpp  except.h  except_test.cpp
tc/cmd/: CMakeLists.txt
tc/cmd/string_bktree_builder/: CMakeLists.txt  main.cpp
tc/cmd/string_bktree_searcher/: CMakeLists.txt  main.cpp
tc/data/: CMakeLists.txt  default_item_dumper_loader.h  edit_distance.h  edit_distance_test.cpp  in_memory_bktree.cpp  in_memory_bktree.h  in_memory_bktree_test.cpp  mmap_bktree.h  multithread_bktree.h  tree_attribute.h
tc/service/: CMakeLists.txt  main.cpp
